# cairo-genizah-search

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  GenizaTranscriptions.txt  Procfile  QUICK_START.md  README.md  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements-prod.txt  requirements.txt
src/genizah_search/: __init__.py  app.py  cli.py  db.py  indexer.py  logging_config.py  parser.py  searcher.py
static/css/: style.css
static/js/: main.js
templates/: base.html  document.html  error.html  index.html  results.html  stats.html
tests/: README.md  __init__.py  sample_genizah_data.txt  test_app.py  test_cli.py  test_db.py  test_e2e.py  test_indexer.py  test_parser.py  test_searcher.py
